[Fix]: flex gap fix for safari mobile

--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -7,11 +7,11 @@
     overflow: hidden;
     max-width: 100vw;
   }
+
   .gallery {
     white-space: nowrap;
     padding: 0 8vw 0 13.5vw;
     display: flex;
-    gap: 30px;
 
     @media screen and (max-width: 1500px) {
       padding: 0 8vw 0 5.5vw;
@@ -27,6 +27,10 @@
       max-width: 20vw;
       height: 30vw;
       overflow: hidden;
+
+      &:not(:first-child) {
+        margin-left: 3rem;
+      }
 
       @media screen and (max-width: 1500px) {
         min-width: 40vw;
